--- a/src/components/results.css
+++ b/src/components/results.css
@@ -1,14 +1,23 @@
-h1 {
+h2 {
 	text-decoration: underline;
+	font-weight: bold;
+}
+
+h4 {
+	font-style: italic;
 }
 
 li {
 	list-style-type: none;
-	color: #ff6384;
+	color: white;
 	background-color: #36a2eb;
 }
 
 li:nth-child(even) {
-	color: #36a2eb;
-	background-color: #ff6384;
+	color: white;
+	background-color: #00d1b2;
+}
+
+label {
+	font-weight: bold;
 }
